# SailAlgo

./: .env.template  .gitignore  README.md  check.py  main.py  pyproject.toml
app/: base.py  diagram.py  image_classify.py
config/: default.toml  diagram.toml
module/diagram/: dummy.py  gaussian1d.py  gaussian2d.py  gaussian2d_orth.py  gaussian2d_proj.py
module/vision/: image_classify.py
samples/AIGC/: diffusion.py  gan.py  normalizing_flow.py  vae.py  vqvae.py
samples/API/: aliyun_deepseek.py  deepseek.py  llm.py  tencent_cloud_deepseek.py
samples/Algorithm/: README.md  xmake.lua
samples/Algorithm/src/: main.cpp  test_util.h
samples/CG/ray_marcher_np/: marcher.py  utils.py
samples/CG/ray_marcher_torch/: marcher.py
samples/LLM/: llm_from_scratch.ipynb  llm_from_scratch.py  lora.py  tune_smolvlm.ipynb  tune_smolvlm.py  use_deepseek.py  use_llama.py  use_llama3_transformers.py  use_llama_role.py  use_m3e_embedding.py  use_qwen.py  use_qwen_vl.py  use_smolvlm.py
samples/ML/: autoencoder.py  pca.ipynb
samples/Math/calc/: fib.py  (+5 more)
samples/NVS/: README.md
samples/Statistic/: importance_sampling.ipynb  mcmc.ipynb  regression.ipynb  reject_sampling.ipynb  test_markov_chain.py
samples/Vision/: cam_reg.py  canny_filter.py  hdr_view.py  merge_hdr.py  use_clip.py  use_florence_2_color_transfer.py
self/: calc_loan.ipynb
tests/sail/: test_libsail.py
transformer/: .gitignore  fintune_t5.py  run_image_classification.py  show_transformer.py  use_finetuned_t5.py  use_t5.py  use_t5_hidden.py  use_t5_inference.py  use_vit.py  use_vit_transformers.py
(+19 files in other folders)
