[project]
name = "sailalgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "open-clip-torch>=2.31.0",
    "transformers>=4.50.3",
    "matplotlib>=3.10.3",
    "ninja>=1.11.1.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.2",
    "pytest>=8.4.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "dotenv>=0.9.9",
    "tencentcloud-sdk-python>=3.0.1410",
    "openai>=1.92.2",
    "pandas>=2.3.0",
    "numpy>=2.2.4",
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[tool.ruff]
lint.ignore = ["ALL"]
lint.select = [
    "S307",  # suspicious-eval-usage
    "S102",  # exec
    "T",     # print-usage
    "W",     # warnings
    "F",     # Pyflakes rules
]
exclude = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--tb=short",
    "--disable-warnings",
    "-p no:warnings",
    "-p no:cacheprovider",
]
markers = [
    "asyncio: mark test as asyncio",
    "current: mark test as current",
    "app: application suite",
    "func: functionality suite"
]
norecursedirs=[
    "data",
]
